refactor(utils): 优化方块、效果和物品工具类的去重逻辑